--- a/index.html
+++ b/index.html
@@ -12,48 +12,50 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 
-    <title>스파르타코딩클럽 | 부트스트랩 연습하기</title>
+    <title>내 생애 최고의 영화들</title>
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Gowun+Dodum&display=swap');
-
-        * {
-            font-family: 'Gowun Dodum', sans-serif;
+        @import url('https://fonts.googleapis.com/css2?family=Anton&family=Pacifico&display=swap');
+        *{
+            
+            font-family: 'Pacifico', cursive;
         }
 
         .mytitle {
-            background-color: green;
-            color: white;
 
+            color: white;
             height: 250px;
+
+            background-image: url("https://movie-phinf.pstatic.net/20210715_95/1626338192428gTnJl_JPEG/movie_image.jpg");
+            background-position: center;
+            background-size: cover;
+
+            margin: 0px auto 0px auto;
 
             display: flex;
             flex-direction: column;
             align-items: center;
             justify-content: center;
-
-            background-image: linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://movie-phinf.pstatic.net/20210715_95/1626338192428gTnJl_JPEG/movie_image.jpg');
-            background-position: center;
-            background-size: cover;
         }
 
         .mytitle>button {
             width: 250px;
             height: 50px;
-
             background-color: transparent;
-            border: 1px solid white;
             color: white;
-            border-radius: 50px;
+            border: 1px solid white;
 
-            margin-top: 20px
+            border-radius: 200px;
+
+            margin-top: 20px;
         }
 
         .mytitle>button:hover {
+
             border: 2px solid white;
         }
 
-        .mytitle {
-            color: gray;
+        .mycomment {
+            color: grey;
 
         }
 
@@ -63,47 +65,51 @@
         }
 
         .mypost {
-           
+            background-color: transparent;
             width: 500px;
             margin: 20px auto 20px auto;
             padding: 20px 20px 20px 20px;
 
-            box-shadow: 0px 0px 4px 0px gray;
+            box-shadow: 0px 0px 3px 0px gray;
+
+
         }
-        .mybtn{
+
+        .mybtn {
             display: flex;
             flex-direction: row;
             align-items: center;
             justify-content: center;
 
-            margin-top: 20px;
+            padding-top: 10px;
+
         }
-    .mybtn >button{
-        margin-right: 10px ;
-    }
+
+        .mybtn>button {
+            margin-right: 10px;
+        }
     </style>
 </head>
 
 <body>
     <div class="mytitle">
-        <h1>내 생애 최고의 영화들!</h1>
+        <h1>내 생애 최고의 영화들</h1>
         <button>영화 기록하기</button>
     </div>
     <div class="mypost">
         <div class="form-floating mb-3">
             <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-            <label for="floatingInput">영화URL
-            </label>
+            <label for="floatingInput">영화url</label>
         </div>
         <div class="input-group mb-3">
             <label class="input-group-text" for="inputGroupSelect01">별점</label>
             <select class="form-select" id="inputGroupSelect01">
-              <option selected>선택하기</option>
-              <option value="1">⭐</option>
-              <option value="2">⭐⭐</option>
-              <option value="3">⭐⭐⭐</option>
+                <option selected></option>
+                <option value="1">⭐</option>
+                <option value="2">⭐⭐</option>
+                <option value="3">⭐⭐⭐</option>
             </select>
-          </div>
+        </div>
         <div class="form-floating">
             <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea"></textarea>
             <label for="floatingTextarea">코멘트</label>
@@ -111,6 +117,7 @@
         <div class="mybtn">
             <button type="button" class="btn btn-dark">기록하기</button>
             <button type="button" class="btn btn-outline-dark">닫기</button>
+
         </div>
     </div>
     <div class="mycards">
@@ -120,10 +127,10 @@
                     <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
                         class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">영화제목</h5>
-                        <p class="card-text">여기에 코멘트가 들어갑니다.</p>
+                        <h5 class="card-title">영화제목을 입력해주세요</h5>
+                        <p class="card-text">코멘트를 입력해주세요</p>
                         <p>⭐⭐⭐</p>
-                        <p class="mycomment">여기에 나의 의견을 쓰면 되겠죠</p>
+                        <p class="mycomment">여기에 나의 코멘트를 쓰면 되겠죠</p>
                     </div>
                 </div>
             </div>
@@ -132,10 +139,10 @@
                     <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
                         class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">영화제목</h5>
-                        <p class="card-text">여기에 코멘트가 들어갑니다.</p>
+                        <h5 class="card-title">영화제목을 입력해주세요</h5>
+                        <p class="card-text">코멘트를 입력해주세요</p>
                         <p>⭐⭐⭐</p>
-                        <p class="mycomment">여기에 나의 의견을 쓰면 되겠죠</p>
+                        <p class="mycomment">여기에 나의 코멘트를 쓰면 되겠죠</p>
                     </div>
                 </div>
             </div>
@@ -144,10 +151,10 @@
                     <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
                         class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">영화제목</h5>
-                        <p class="card-text">여기에 코멘트가 들어갑니다.</p>
+                        <h5 class="card-title">영화제목을 입력해주세요</h5>
+                        <p class="card-text">코멘트를 입력해주세요</p>
                         <p>⭐⭐⭐</p>
-                        <p class="mycomment">여기에 나의 의견을 쓰면 되겠죠</p>
+                        <p class="mycomment">여기에 나의 코멘트를 쓰면 되겠죠</p>
                     </div>
                 </div>
             </div>
@@ -156,16 +163,14 @@
                     <img src="https://movie-phinf.pstatic.net/20210728_221/1627440327667GyoYj_JPEG/movie_image.jpg"
                         class="card-img-top" alt="...">
                     <div class="card-body">
-                        <h5 class="card-title">영화제목</h5>
-                        <p class="card-text">여기에 코멘트가 들어갑니다.</p>
+                        <h5 class="card-title">영화제목을 입력해주세요</h5>
+                        <p class="card-text">코멘트를 입력해주세요</p>
                         <p>⭐⭐⭐</p>
-                        <p class="mycomment">여기에 나의 의견을 쓰면 되겠죠</p>
+                        <p class="mycomment">여기에 나의 코멘트를 쓰면 되겠죠</p>
                     </div>
                 </div>
             </div>
-
         </div>
-    </div>
 </body>
 
 </html>
